--- a/Prevu.Synoptics.V4228-RES/Pages/P430.xaml
+++ b/Prevu.Synoptics.V4228-RES/Pages/P430.xaml
@@ -9,6 +9,46 @@
              x:Class="Prevu.Synoptics.P430" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
   <Canvas >
+    <Labels:Pipe Width="102" Canvas.Top="290" StatusComponent="433-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="738" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="433-21-CV1" VisibilitySignal="LS1">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="90"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Labels:Pipe Width="146" Canvas.Top="405" StatusComponent="433-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="716" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Center" VisibilityComponent="433-22-CV1" VisibilitySignal="LS1">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="90"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Labels:Pipe Width="104" Canvas.Top="86" StatusComponent="431-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="702" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Center" VisibilityComponent="431-22-CV1" VisibilitySignal="LS1">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="90"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Labels:Pipe Width="196" Canvas.Top="227" StatusComponent="431-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="656" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="431-21-CV1" VisibilitySignal="LS1">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="90"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
     <Labels:Pipe Width="244" Canvas.Top="475" StatusComponent="455-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1023" Color="Water" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
@@ -62,28 +102,8 @@
     </Labels:Pipe>
     <Labels:Pipe Width="120" StatusComponent="380-01-MA1" PipeHeight="Medium" Canvas.Left="86" Canvas.Top="130" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:Pipe Width="135" VerticalAlignment="Center" Canvas.Top="131" StatusComponent="420-01-MA1" PipeHeight="Medium" Canvas.Left="264" HorizontalAlignment="Left"/>
-    <Labels:Pipe Width="211" VerticalAlignment="Top" Canvas.Top="134" StatusComponent="431-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="544" HorizontalAlignment="Center" PipeHeight="Medium"/>
-    <Labels:Pipe Width="326" VisibilityComponent="" VerticalAlignment="Center" Canvas.Top="336" StatusComponent="433-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="464" HorizontalAlignment="Left" PipeHeight="Medium"/>
-    <Labels:Pipe Width="80" Canvas.Top="135" StatusComponent="431-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="714" HorizontalAlignment="Center" VerticalAlignment="Top" PipeHeight="Medium">
-      <Labels:Pipe.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform/>
-          <SkewTransform/>
-          <RotateTransform Angle="90"/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Labels:Pipe.RenderTransform>
-    </Labels:Pipe>
-    <Labels:Pipe Width="82" Canvas.Top="338" StatusComponent="433-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="748" HorizontalAlignment="Center" VerticalAlignment="Top" PipeHeight="Medium">
-      <Labels:Pipe.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform/>
-          <SkewTransform/>
-          <RotateTransform Angle="90"/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Labels:Pipe.RenderTransform>
-    </Labels:Pipe>
+    <Labels:Pipe Width="215" VerticalAlignment="Center" Canvas.Top="134" StatusComponent="431-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="544" HorizontalAlignment="Left" PipeHeight="Medium"/>
+    <Labels:Pipe Width="330" VisibilityComponent="" VerticalAlignment="Center" Canvas.Top="336" StatusComponent="433-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="464" HorizontalAlignment="Left" PipeHeight="Medium"/>
     <Labels:Pipe Width="50" StatusComponent="440-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="816" Canvas.Top="479" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:Pipe Width="200" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="451-21-CV1" Canvas.Left="363" Canvas.Top="437" HorizontalAlignment="Center" VerticalAlignment="Top" Text="{lex:Loc ADDITIVE}"/>
     <Labels:Pipe Width="289" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="451-21-CV1" Canvas.Left="417" Canvas.Top="586" HorizontalAlignment="Center" VerticalAlignment="Top">
@@ -154,46 +174,6 @@
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
     <Labels:Pipe Width="382" VisibilityComponent="431-22-CV1" Canvas.Top="39" StatusComponent="431-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="753" PipeHeight="Medium" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilitySignal="LS1"/>
-    <Labels:Pipe Width="62" Canvas.Top="65" StatusComponent="431-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="723" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="431-22-CV1" VisibilitySignal="LS1">
-      <Labels:Pipe.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform/>
-          <SkewTransform/>
-          <RotateTransform Angle="90"/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Labels:Pipe.RenderTransform>
-    </Labels:Pipe>
-    <Labels:Pipe Width="150" Canvas.Top="250" StatusComponent="431-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="679" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="431-21-CV1" VisibilitySignal="LS1">
-      <Labels:Pipe.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform/>
-          <SkewTransform/>
-          <RotateTransform Angle="90"/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Labels:Pipe.RenderTransform>
-    </Labels:Pipe>
-    <Labels:Pipe Width="60" Canvas.Top="269" StatusComponent="433-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="759" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="433-21-CV1" VisibilitySignal="LS1">
-      <Labels:Pipe.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform/>
-          <SkewTransform/>
-          <RotateTransform Angle="90"/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Labels:Pipe.RenderTransform>
-    </Labels:Pipe>
-    <Labels:Pipe Width="100" Canvas.Top="428" StatusComponent="433-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="739" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="433-22-CV1" VisibilitySignal="LS1">
-      <Labels:Pipe.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform/>
-          <SkewTransform/>
-          <RotateTransform Angle="90"/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Labels:Pipe.RenderTransform>
-    </Labels:Pipe>
     <Labels:Pipe Width="50" StatusComponent="444-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1191" Canvas.Top="596" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:Pipe Width="54" StatusComponent="444-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1212" Canvas.Top="621" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Labels:Pipe.RenderTransform>
@@ -216,7 +196,7 @@
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
     <Labels:Pipe Width="482" Color="Water" StatusComponent="444-01-MA1" VisibilityComponent="" Canvas.Left="636" Canvas.Top="614" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-    <Machines:WaterPump Width="45" VerticalAlignment="Top" Canvas.Top="319" RenderTransformOrigin="0.5,0.5" Canvas.Left="597" Height="45" HorizontalAlignment="Center">
+    <Machines:WaterPump Width="44" VerticalAlignment="Center" Canvas.Top="319" RenderTransformOrigin="0.5,0.5" Canvas.Left="638" Height="45" HorizontalAlignment="Left">
       <Machines:WaterPump.RenderTransform>
         <TransformGroup>
           <ScaleTransform ScaleX="-1"/>
@@ -251,51 +231,11 @@
     <Machines:V01_WCE_Centrifuge Canvas.Left="1101" Canvas.Top="266" Height="118" Width="150" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:V01_VB_VibratingScreen Canvas.Left="721" Canvas.Top="470" Height="100" Width="100" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Machines:V01_VB_VibratingScreen Canvas.Left="1096" Canvas.Top="587" Height="100" Width="100" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Machines:V01_CV_ValvolaGhigliottina Canvas.Left="740" Canvas.Top="171" Width="100" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
-      <Machines:V01_CV_ValvolaGhigliottina.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform ScaleX="-1"/>
-          <SkewTransform/>
-          <RotateTransform/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Machines:V01_CV_ValvolaGhigliottina.RenderTransform>
-    </Machines:V01_CV_ValvolaGhigliottina>
-    <Machines:V01_CV_ValvolaGhigliottina Canvas.Left="740" Canvas.Top="90" Width="100" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
-      <Machines:V01_CV_ValvolaGhigliottina.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform ScaleX="-1"/>
-          <SkewTransform/>
-          <RotateTransform/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Machines:V01_CV_ValvolaGhigliottina.RenderTransform>
-    </Machines:V01_CV_ValvolaGhigliottina>
-    <Machines:V01_CV_ValvolaGhigliottina Canvas.Left="776" Canvas.Top="374" Width="100" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
-      <Machines:V01_CV_ValvolaGhigliottina.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform ScaleX="-1"/>
-          <SkewTransform/>
-          <RotateTransform/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Machines:V01_CV_ValvolaGhigliottina.RenderTransform>
-    </Machines:V01_CV_ValvolaGhigliottina>
-    <Machines:V01_CV_ValvolaGhigliottina Canvas.Left="776" Canvas.Top="293" Width="100" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
-      <Machines:V01_CV_ValvolaGhigliottina.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform ScaleX="-1"/>
-          <SkewTransform/>
-          <RotateTransform/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Machines:V01_CV_ValvolaGhigliottina.RenderTransform>
-    </Machines:V01_CV_ValvolaGhigliottina>
     <Machines:V01_VSP_SepTank_w3Paddles Canvas.Left="365" Canvas.Top="101" Height="263" Width="210" HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="430-41-LT1" TrendName="LEVEL"/>
     <Machines:SCW_ScrewConveyor_straight Canvas.Left="1223" Canvas.Top="437" HorizontalAlignment="Center" VerticalAlignment="Top" Width="136"/>
     <Machines:Waste Height="46" Width="44" Canvas.Left="842" Canvas.Top="507" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Machines:Waste Height="46" Width="44" Canvas.Left="1217" Canvas.Top="624" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Machines:WaterPump Width="45" Canvas.Top="116" RenderTransformOrigin="0.5,0.5" Canvas.Left="637" Height="45" HorizontalAlignment="Center" VerticalAlignment="Top">
+    <Machines:WaterPump Width="44" Canvas.Top="116" RenderTransformOrigin="0.5,0.5" Canvas.Left="638" Height="45" HorizontalAlignment="Left" VerticalAlignment="Center">
       <Machines:WaterPump.RenderTransform>
         <TransformGroup>
           <ScaleTransform ScaleX="-1"/>
@@ -330,7 +270,7 @@
     <Labels:JumpLabel JumpFromLabel="457-01-MA1" JumpToLabel="283-01-MA1" Canvas.Left="837" Canvas.Top="736" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="420-01-MA1" JumpToLabel="380-01-MA1" Canvas.Left="58" Canvas.Top="100"/>
     <Labels:DetailsLabel ComponentName="430-VIEW" DetailsPageName="D430" HideComponentName="True" Canvas.Left="509" Canvas.Top="50" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:DeviceLabel ComponentName="433-01-MA1" Canvas.Left="575" Canvas.Top="252" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:DeviceLabel ComponentName="433-01-MA1" Canvas.Left="615" Canvas.Top="252" HorizontalAlignment="Center" VerticalAlignment="Center"/>
     <Labels:DeviceLabel ComponentName="430-PADDLES" Canvas.Left="408" Canvas.Top="50" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel ComponentName="430-41-LT1" RenderTransformOrigin="0.5,0.5" Canvas.Left="425" Canvas.Top="167" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel ComponentName="420-01-MA1" Canvas.Left="196" Canvas.Top="46" HorizontalAlignment="Left" VerticalAlignment="Center"/>
@@ -345,11 +285,9 @@
     <Labels:DeviceLabel ComponentName="456-01-MA1" Canvas.Left="1245" Canvas.Top="475" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="450-42-TT1" RenderTransformOrigin="0.5,0.5" Canvas.Left="559" Canvas.Top="717" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="444-01-MA1" Canvas.Left="1101" Canvas.Top="653" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:DeviceLabel ComponentName="431-01-MA1" Canvas.Left="615" Canvas.Top="49" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:DeviceLabel ComponentName="431-21-CV1" Canvas.Left="852" Canvas.Top="156" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:DeviceLabel ComponentName="431-22-CV1" Canvas.Left="852" Canvas.Top="75" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:DeviceLabel ComponentName="433-22-CV1" Canvas.Left="888" Canvas.Top="359" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:DeviceLabel ComponentName="433-21-CV1" Canvas.Left="888" Canvas.Top="278" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:DeviceLabel ComponentName="455-MATERIAL" Canvas.Left="995" Canvas.Top="117" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+    <Labels:DeviceLabel ComponentName="431-01-MA1" Canvas.Left="615" Canvas.Top="49" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel ComponentName="455-MATERIAL" Canvas.Left="869" Canvas.Top="140" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+    <Labels:DetailsLabel ComponentName="430-VIEW" DetailsPageName="D430" HideComponentName="True" Canvas.Left="970" Canvas.Top="140" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:DisplayLabel Canvas.Left="869" Canvas.Top="92" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="455-MATERIAL"/>
   </Canvas>
 </UserControl>
