--- a/Prevu.Synoptics.V3085_Anviplas/P510.xaml
+++ b/Prevu.Synoptics.V3085_Anviplas/P510.xaml
@@ -215,7 +215,7 @@
     <Labels:DeviceLabel VerticalAlignment="Center" Canvas.Top="574" Canvas.Left="1037" HorizontalAlignment="Center" ComponentName="534-01-MA1"/>
     <Labels:DeviceLabel VerticalAlignment="Center" Canvas.Top="653" Canvas.Left="1208" HorizontalAlignment="Left" ComponentName="537-01-MA1"/>
     <Labels:DeviceLabel VerticalAlignment="Center" Canvas.Top="653" Canvas.Left="1317" HorizontalAlignment="Left" ComponentName="544-01-MA1"/>
-    <Labels:DeviceLabel VerticalAlignment="Center" Canvas.Top="574" Canvas.Left="928" HorizontalAlignment="Left" ComponentName="530-21-CV1"/>
+    <Labels:DeviceLabel VerticalAlignment="Center" Canvas.Top="574" Canvas.Left="928" HorizontalAlignment="Left" ComponentName="527-01-MA1"/>
     <Labels:JumpLabel 
           JumpFromLabel="510-23-CV1" 
           JumpToLabel="529-01-MA1" Canvas.Left="281" Canvas.Top="345" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.272,-3.45"/>
@@ -240,5 +240,6 @@
       </Labels:DetailsLabel.RenderTransform>
     </Labels:DetailsLabel>
     <Machines:V01_VS_Airlock Canvas.Left="1156" Canvas.Top="683" Width="50" Height="50" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Machines:V01_VS_Airlock Canvas.Left="875" Canvas.Top="602" Width="50" Height="50" HorizontalAlignment="Center" VerticalAlignment="Top"/>
   </Canvas>
 </UserControl>
