--- a/Prevu.Synoptics.V3085_Anviplas/P520.xaml
+++ b/Prevu.Synoptics.V3085_Anviplas/P520.xaml
@@ -203,9 +203,9 @@
       ComponentName="520-02-MA1"  Canvas.Left="869" Canvas.Top="420" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:DeviceLabel Canvas.Top="552"  Canvas.Left="757" ComponentName="524-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:DeviceLabel Canvas.Top="574" Canvas.Left="1037" ComponentName="554-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel Canvas.Top="574" Canvas.Left="927" ComponentName="550-21-CV1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel Canvas.Top="574" Canvas.Left="927" ComponentName="547-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:DeviceLabel Canvas.Top="653" Canvas.Left="1317" ComponentName="564-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel Canvas.Top="653" Canvas.Left="1208" ComponentName="560-21-CV1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel Canvas.Top="653" Canvas.Left="1208" ComponentName="557-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:JumpLabel 
       JumpFromLabel="520-23-CV1" 
       JumpToLabel="529-01-MA1" Canvas.Left="281" Canvas.Top="345" RenderTransformOrigin="0.272,-3.45" HorizontalAlignment="Center" VerticalAlignment="Center"/>
@@ -229,5 +229,7 @@
                 </TransformGroup>
             </Labels:DetailsLabel.RenderTransform>
         </Labels:DetailsLabel>
-    </Canvas>
+    <Machines:V01_VS_Airlock Canvas.Left="1156" Canvas.Top="683" Width="50" Height="50" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+    <Machines:V01_VS_Airlock Canvas.Left="875" Canvas.Top="602" Width="50" Height="50" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+  </Canvas>
 </UserControl>
