--- a/Prevu.Synoptics.V3085_Anviplas/P464.xaml
+++ b/Prevu.Synoptics.V3085_Anviplas/P464.xaml
@@ -84,7 +84,7 @@
       </Machines:CV_Valve_001.RenderTransform>
     </Machines:CV_Valve_001>
     <Blowers:VT_CMM_BlowerAirCompressor VerticalAlignment="Top" Height="54" Canvas.Left="1166" Canvas.Top="685" HorizontalAlignment="Center"/>
-    <Machines:V01_FP_FiltroPressa_w3Screw Canvas.Left="615" Canvas.Top="265" Height="365" Width="372" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Machines:V01_FP_FiltroPressa_w3Screw_wDistributors Canvas.Left="615" Canvas.Top="265" Height="365" Width="372" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:CV_Valve HorizontalAlignment="Center" VerticalAlignment="Top" Height="43" Width="39" Canvas.Left="955" Canvas.Top="489"/>
     <Machines:CV_Valve HorizontalAlignment="Center" VerticalAlignment="Top" Height="43" Width="39" Canvas.Left="955" Canvas.Top="417"/>
     <Machines:CV_Valve HorizontalAlignment="Center" VerticalAlignment="Top" Height="43" Width="39" Canvas.Left="955" Canvas.Top="349"/>
@@ -152,8 +152,10 @@
     <Labels:DeviceLabel 
         ComponentName="464-01-YA1" Canvas.Left="725" Canvas.Top="631" HorizontalAlignment="Center" VerticalAlignment="Center"/>
     <Labels:DeviceLabel 
-      ComponentName="464-05-MA1" Canvas.Left="801" Canvas.Top="193" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+      ComponentName="464-05-MA1" Canvas.Left="779" Canvas.Top="277" HorizontalAlignment="Center" VerticalAlignment="Center"/>
     <Labels:DeviceLabel 
-      ComponentName="464-05-MA2" Canvas.Left="801" Canvas.Top="262" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+      ComponentName="464-05-MA2" Canvas.Left="876" Canvas.Top="277" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel 
+      ComponentName="464-06-MA1" Canvas.Left="779" Canvas.Top="217" HorizontalAlignment="Center" VerticalAlignment="Center"/>
   </Canvas>
 </UserControl>
