--- a/Prevu.Synoptics.V3085_Anviplas/P474.xaml
+++ b/Prevu.Synoptics.V3085_Anviplas/P474.xaml
@@ -74,7 +74,7 @@
     <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="64" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="482-21-CV1" Canvas.Left="1131" Canvas.Top="627"/>
     <Machines:V01_WCE_Centrifuge Canvas.Left="302" Canvas.Top="43" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Blowers:VT_CMM_BlowerAirCompressor VerticalAlignment="Top" Height="54" Canvas.Left="1166" Canvas.Top="685" HorizontalAlignment="Center"/>
-    <Machines:V01_FP_FiltroPressa_w3Screw Canvas.Left="615" Canvas.Top="265" Height="365" Width="372" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Machines:V01_FP_FiltroPressa_w3Screw_wDistributors Canvas.Left="615" Canvas.Top="265" Height="365" Width="372" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:CV_Valve HorizontalAlignment="Center" VerticalAlignment="Top" Height="43" Width="39" Canvas.Left="955" Canvas.Top="489"/>
     <Machines:CV_Valve HorizontalAlignment="Center" VerticalAlignment="Top" Height="43" Width="39" Canvas.Left="955" Canvas.Top="417"/>
     <Machines:CV_Valve HorizontalAlignment="Center" VerticalAlignment="Top" Height="43" Width="39" Canvas.Left="955" Canvas.Top="349"/>
@@ -135,11 +135,13 @@
     <Labels:DeviceLabel 
         ComponentName="474-01-YA1" Canvas.Left="725" Canvas.Top="631" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel 
-      ComponentName="474-05-MA1" Canvas.Left="801" Canvas.Top="193" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+      ComponentName="474-05-MA1" Canvas.Left="779" Canvas.Top="277" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel 
-      ComponentName="474-05-MA2" Canvas.Left="801" Canvas.Top="262" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+      ComponentName="474-05-MA2" Canvas.Left="876" Canvas.Top="277" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DetailsLabel ComponentName="474-VIEW" DetailsPageName="D464" HideComponentName="True" Canvas.Left="693" Canvas.Top="151" HorizontalAlignment="Center" VerticalAlignment="Center"/>
     <Labels:DeviceLabel 
       ComponentName="474-61-LEV" Canvas.Left="593" Canvas.Top="151" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel 
+      ComponentName="474-06-MA1" Canvas.Left="779" Canvas.Top="217" HorizontalAlignment="Center" VerticalAlignment="Top"/>
   </Canvas>
 </UserControl>
