--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/Details/D810.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/Details/D810.xaml
@@ -12,6 +12,6 @@
     <Machines:V01_SLX_MixingSiloScrew Height="442" Width="323" HorizontalAlignment="Left" VerticalAlignment="Center" Canvas.Left="5" Canvas.Top="2" ComponentName="810-41-WT1" Color="DryMaterial" TrendName="WEIGHT"/>
     <Labels:SignalLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="810-41-WT1" SignalName="LSHA" Canvas.Left="34" Canvas.Top="85"/>
     <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="810-01-MA1" Canvas.Left="117" Canvas.Top="22"/>
-    <Labels:DeviceLabel HorizontalAlignment="Left" ComponentName="810-41-WT1" Canvas.Left="34" Canvas.Top="163" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel HorizontalAlignment="Left" ComponentName="810-41-LT1" Canvas.Left="34" Canvas.Top="163" VerticalAlignment="Center"/>
   </Canvas>
 </UserControl>
