--- a/Prevu.Synoptics.V3085_Anviplas/D474.xaml
+++ b/Prevu.Synoptics.V3085_Anviplas/D474.xaml
@@ -22,11 +22,11 @@
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
     <Machines:V01_FP_Hopper_DETAIL Canvas.Left="21" Canvas.Top="50" Height="334" Width="509" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="474-61-LEV" SignalName="LSHA" Canvas.Left="229" Canvas.Top="85" />
-    <Labels:SignalLabel ComponentName="474-61-LEV" SignalName="LSLA1" Canvas.Left="87" Canvas.Top="236" HorizontalAlignment="Left" VerticalAlignment="Center" FlowDirection="LeftToRight"/>
-    <Labels:SignalLabel ComponentName="474-61-LEV" SignalName="LSLA2" Canvas.Left="260" Canvas.Top="269" HorizontalAlignment="Left" VerticalAlignment="Center" />
+    <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="474-61-LEV" SignalName="LSH2" Canvas.Left="267" Canvas.Top="100" />
+    <Labels:SignalLabel ComponentName="474-61-LEV" SignalName="LSL1" Canvas.Left="82" Canvas.Top="269" HorizontalAlignment="Left" VerticalAlignment="Top" FlowDirection="LeftToRight"/>
+    <Labels:SignalLabel ComponentName="474-61-LEV" SignalName="LSL2" Canvas.Left="267" Canvas.Top="269" HorizontalAlignment="Left" VerticalAlignment="Center" />
     <Labels:DeviceLabel 
-            ComponentName="474-61-LEV" Canvas.Left="222" Canvas.Top="154" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            ComponentName="474-61-LEV" Canvas.Left="238" Canvas.Top="177" HorizontalAlignment="Left" VerticalAlignment="Top"/>
     <Rectangle Height="6" Stroke="Black" Width="46" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="238" Canvas.Top="16" HorizontalAlignment="Left" VerticalAlignment="Center">
       <Rectangle.RenderTransform>
         <TransformGroup>
@@ -37,5 +37,6 @@
         </TransformGroup>
       </Rectangle.RenderTransform>
     </Rectangle>
+    <Labels:SignalLabel ComponentName="474-61-LEV" SignalName="LSH1" Canvas.Left="82" Canvas.Top="100" HorizontalAlignment="Left" VerticalAlignment="Top" />
   </Canvas>
 </UserControl>
