--- a/Prevu.Synoptics.V4228-RES/Details/D335.xaml
+++ b/Prevu.Synoptics.V4228-RES/Details/D335.xaml
@@ -24,7 +24,7 @@
         </Labels:Pipe>
         <Labels:Pipe Width="44" StatusComponent="335-23-CV1" PipeHeight="Medium" Canvas.Left="328" Canvas.Top="403" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="91" StatusComponent="335-23-CV1" PipeHeight="Medium" Canvas.Left="411" Canvas.Top="403" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="56" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Canvas.Left="182" Canvas.Top="67" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="56" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="335-21-CV1" Canvas.Left="182" Canvas.Top="67" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
