--- a/Prevu.Synoptics.V4228-RES/Pages/P020.xaml
+++ b/Prevu.Synoptics.V4228-RES/Pages/P020.xaml
@@ -19,7 +19,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe StatusComponent="032-01-MA1" Width="175" PipeHeight="Medium" Canvas.Left="743" Canvas.Top="390" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:Pipe StatusComponent="024-01-MA1" Width="175" PipeHeight="Medium" Canvas.Left="743" Canvas.Top="390" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent=""/>
     <Labels:Pipe StatusComponent="030-01-MA1" Width="173" PipeHeight="Medium" Canvas.Left="1049" Canvas.Top="487" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:Pipe StatusComponent="020-23-CV1" HorizontalAlignment="Left" VerticalAlignment="Center" Width="60" PipeHeight="Medium" Canvas.Left="393" Canvas.Top="538"/>
     <Labels:Pipe StatusComponent="018-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center" Width="218" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="209" Canvas.Top="383">
@@ -43,7 +43,7 @@
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
     <Labels:Pipe StatusComponent="018-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center" Width="42" PipeHeight="Medium" Canvas.Left="281" Canvas.Top="278"/>
-    <Labels:Pipe StatusComponent="032-01-MA1" Width="66" PipeHeight="Medium" Canvas.Left="880" Canvas.Top="418" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5">
+    <Labels:Pipe StatusComponent="024-01-MA1" Width="66" PipeHeight="Medium" Canvas.Left="880" Canvas.Top="418" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" VisibilityComponent="">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
