--- a/Prevu.Synoptics.V4228-RES/Pages/P140.xaml
+++ b/Prevu.Synoptics.V4228-RES/Pages/P140.xaml
@@ -19,7 +19,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="104" StatusComponent="180-01-EC1" RenderTransformOrigin="0.5,0.5" Canvas.Left="730" Canvas.Top="672" HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct">
+    <Labels:Pipe Width="104" StatusComponent="180-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="730" Canvas.Top="672" HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -29,7 +29,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="44" StatusComponent="140-01-EC1" PipeHeight="Medium" Canvas.Left="898" Canvas.Top="175" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5">
+    <Labels:Pipe Width="44" StatusComponent="140-01-MA1" PipeHeight="Medium" Canvas.Left="898" Canvas.Top="175" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -39,7 +39,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="120" StatusComponent="150-01-EC1" PipeHeight="Medium" Canvas.Left="1142" Canvas.Top="278" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5">
+    <Labels:Pipe Width="120" StatusComponent="150-01-MA1" PipeHeight="Medium" Canvas.Left="1142" Canvas.Top="278" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -63,7 +63,7 @@
     <Labels:Pipe Width="93" StatusComponent="153-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="233" Canvas.Top="433" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:Pipe Width="737" StatusComponent="143-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="123" Canvas.Top="284" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="189" StatusComponent="129-01-MA1" PipeHeight="Medium" Canvas.Left="642" Canvas.Top="122"/>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="104" StatusComponent="150-01-EC1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="91" Canvas.Top="376">
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="104" StatusComponent="150-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="91" Canvas.Top="376">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -74,7 +74,7 @@
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
     <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="115" StatusComponent="120-01-MA1" PipeHeight="Medium" Canvas.Left="140" Canvas.Top="96"/>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="28" StatusComponent="150-01-EC1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1226" Canvas.Top="238">
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="28" StatusComponent="150-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1226" Canvas.Top="238">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -84,7 +84,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="80" StatusComponent="140-01-EC1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="919" Canvas.Top="246">
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="80" StatusComponent="140-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="919" Canvas.Top="246">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -94,7 +94,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="965" StatusComponent="150-01-EC1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="141" Canvas.Top="326"/>
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="965" StatusComponent="150-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="141" Canvas.Top="326"/>
     <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="147" StatusComponent="143-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="52" Canvas.Top="355">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
@@ -106,7 +106,7 @@
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
     <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="252" StatusComponent="124-01-MA1" PipeHeight="Medium" Canvas.Left="327" Canvas.Top="97" RenderTransformOrigin="0.5,0.5"/>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="154" StatusComponent="140-01-EC1" PipeHeight="Medium" Canvas.Left="916" Canvas.Top="192"/>
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="154" StatusComponent="140-01-MA1" PipeHeight="Medium" Canvas.Left="916" Canvas.Top="192"/>
     <Labels:Pipe Width="153" StatusComponent="155-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="372" Canvas.Top="550" HorizontalAlignment="Left" VerticalAlignment="Center">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
@@ -128,7 +128,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="52" StatusComponent="180-01-EC1" RenderTransformOrigin="0.5,0.5" Canvas.Left="794" Canvas.Top="668" HorizontalAlignment="Left" VerticalAlignment="Center">
+    <Labels:Pipe Width="52" StatusComponent="180-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="794" Canvas.Top="668" HorizontalAlignment="Left" VerticalAlignment="Center">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -170,7 +170,7 @@
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
     <Labels:Pipe Width="313" StatusComponent="170-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="926" Canvas.Top="379" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:Pipe Width="42" StatusComponent="140-01-EC1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="938" Canvas.Top="163" HorizontalAlignment="Left" VerticalAlignment="Center">
+    <Labels:Pipe Width="42" StatusComponent="140-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="938" Canvas.Top="163" HorizontalAlignment="Left" VerticalAlignment="Center">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -180,9 +180,9 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="31" StatusComponent="150-01-EC1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1211" Canvas.Top="250" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:Pipe Width="88" StatusComponent="150-01-EC1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1102" Canvas.Top="250" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:Pipe Width="80" StatusComponent="150-01-EC1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1064" Canvas.Top="288" HorizontalAlignment="Left" VerticalAlignment="Center">
+    <Labels:Pipe Width="31" StatusComponent="150-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1211" Canvas.Top="250" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:Pipe Width="88" StatusComponent="150-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1102" Canvas.Top="250" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:Pipe Width="80" StatusComponent="150-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1064" Canvas.Top="288" HorizontalAlignment="Left" VerticalAlignment="Center">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
