--- a/Prevu.Synoptics.V4228-RES/Pages/P880.xaml
+++ b/Prevu.Synoptics.V4228-RES/Pages/P880.xaml
@@ -121,9 +121,9 @@
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
     <Labels:Pipe Width="57" StatusComponent="880-01-ECS13" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="789" Canvas.Top="444" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:Pipe Width="61" StatusComponent="880-01-ECS13" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="868" Canvas.Top="444" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:Pipe Width="66" StatusComponent="880-01-ECS13" RenderTransformOrigin="0.5,0.5" Canvas.Left="714" Canvas.Top="498" VisibilityComponent="" VisibilitySignal="" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:Pipe Width="55" RenderTransformOrigin="0.5,0.5" StatusComponent="880-01-ECS10" Canvas.Left="190" Canvas.Top="476" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top" />
+    <Labels:Pipe Width="61" StatusComponent="883-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="868" Canvas.Top="444" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:Pipe Width="66" StatusComponent="887-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="714" Canvas.Top="498" VisibilityComponent="" VisibilitySignal="" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:Pipe Width="55" RenderTransformOrigin="0.5,0.5" StatusComponent="885-01-MA1" Canvas.Left="190" Canvas.Top="476" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top" />
     <Labels:Pipe Width="100" RenderTransformOrigin="0.5,0.5" StatusComponent="888-01-MA1" PipeHeight="Medium" Canvas.Left="1260" Canvas.Top="402" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
@@ -251,7 +251,7 @@
     </Rectangle>
     <TextBlock TextWrapping="Wrap" 
             TextAlignment="Right" 
-            FontSize="16" Foreground="White" Text="{lex:Loc Sample}" Canvas.Left="992" Canvas.Top="681" Opacity="0.7" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+            FontSize="16" Foreground="White" Text="{lex:Loc Sampling}" Canvas.Left="999" Canvas.Top="681" Opacity="0.7" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:JumpLabel 
             JumpFromLabel="880-01-EC1" Canvas.Left="96" Canvas.Top="40" HorizontalAlignment="Center" VerticalAlignment="Top" JumpToLabel="868-01-MA1" />
     <Labels:DetailsLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="880-VIEW" DetailsPageName="D880" HideComponentName="True" Canvas.Left="518" Canvas.Top="188"/>
